--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,7 +15,8 @@ steps:
     versionSpec: '10.x'
   displayName: 'Install Node.js'
 
-- script: |
-    npm install
-    npm run build
-  displayName: 'npm install and build'
+- task: NodeTool@0
+  inputs:
+    versionSource: 'spec'
+    versionSpec: '14.x'
+
