--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,11 +12,10 @@ pool:
 steps:
 - task: NodeTool@0
   inputs:
-    versionSpec: '10.x'
+    versionSpec: '14.x'
   displayName: 'Install Node.js'
 
-- task: NodeTool@0
-  inputs:
-    versionSource: 'spec'
-    versionSpec: '14.x'
-
+- script: |
+    npm install
+    npm run build
+  displayName: 'npm install and build'
