--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,5 +16,9 @@ steps:
   displayName: 'Install Node.js'
 
 - script: |
-   "start": "npm run lint && npm run build && cd server && npm install && node index.js
+    npm run lint
+    npm run build
+    cd server
+    npm install 
+    node index.js
   displayName: 'npm install and build'
