--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,3 +22,8 @@ steps:
 - task: Npm@1
   inputs:
     command: 'install'
+- task: NodeTool@0
+  inputs:
+    versionSource: 'spec'
+    versionSpec: 
+    checkLatest: true
